# stockpad

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RESEARCH_LOG.md  pyproject.toml
connectors/: edgar.py  polygon.py
core/: sectors.py  staleness.py  types.py  watchlist.py
dashboard/: table.py  watchlist.py
data/: insider_cluster.json  sector_rotation.json
scripts/: run_insider_cluster.py  run_sector_rotation.py  sector_rotation.py
signals/: insider_cluster.py  sector_rotation.py
