[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stockpad"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
]

[tool.setuptools]
packages = ["core", "connectors", "signals", "dashboard"]
